--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.postimg.cc/wxPWPMsK/DALL-E-2024-09-20-16-50-54-A-sleek-modern-logo-featuring-the-name-Shiwang-The-design-should-be.webp" />
+    <link rel="icon" href="logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="This is portfolio of Shiwang Pandey | freelancer | GCOEN"
     />
-    <link rel="apple-touch-icon" href="https://i.postimg.cc/wxPWPMsK/DALL-E-2024-09-20-16-50-54-A-sleek-modern-logo-featuring-the-name-Shiwang-The-design-should-be.webp" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link rel="apple-touch-icon" href="logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Shiwang Pandey</title>
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root">
+      <!-- Inline responsive SVG logo -->
+    
+    </div>
   </body>
 </html>
